# model_learn

./: .gitignore  CHANGELOG.md  CONCEPTS.md  DEVLOG.md  README.md  REPRODUCE.md  pyproject.toml  requirements.txt
docs/: phase1-course.md
docs/superpowers/plans/: 2026-06-22-slm-phase1-base-model.md  2026-07-16-phase1-self-study-course.md
docs/superpowers/specs/: 2026-06-22-slm-from-scratch-phase1-design.md  2026-07-16-phase1-self-study-course-design.md
export/tinystories-slm/: README.md
labs/: lab01_bpe_by_hand.py  lab02_attention_peek.py  lab03_gibberish.py  lab05_sampling.py  lab07_gguf_teardown.py  lab08_quant_compare.py
notebooks/: README.md  colab_train.ipynb
scripts/: Modelfile  convert_to_gguf.sh
src/slm/: config.py  data.py  export_hf.py  model.py  sample.py  tokenizer.py  train.py
tests/: test_config.py  test_data.py  test_export.py  test_model.py  test_model_components.py  test_tokenizer.py  test_train.py
tests/fixtures/: tiny_stories.txt
